--- a/css/output.css
+++ b/css/output.css
@@ -570,14 +570,6 @@ video {
   top: 0.5rem;
 }
 
-.z-50 {
-  z-index: 50;
-}
-
-.z-40 {
-  z-index: 40;
-}
-
 .m-10 {
   margin: 2.5rem;
 }
@@ -677,6 +669,10 @@ video {
 .text-zinc-800 {
   --tw-text-opacity: 1;
   color: rgb(39 39 42 / var(--tw-text-opacity));
+}
+
+.duration-700 {
+  transition-duration: 700ms;
 }
 
 @media (min-width: 768px) {
