--- a/css/output.css
+++ b/css/output.css
@@ -554,6 +554,10 @@ video {
   --tw-contain-style:  ;
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -562,12 +566,40 @@ video {
   position: relative;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
+.bottom-1 {
+  bottom: 0.25rem;
+}
+
 .left-0 {
   left: 0px;
 }
 
+.right-0 {
+  right: 0px;
+}
+
+.right-1 {
+  right: 0.25rem;
+}
+
+.right-24 {
+  right: 6rem;
+}
+
 .top-2 {
   top: 0.5rem;
+}
+
+.top-36 {
+  top: 9rem;
+}
+
+.z-50 {
+  z-index: 50;
 }
 
 .m-10 {
@@ -596,12 +628,36 @@ video {
   height: 13rem;
 }
 
+.h-\[120px\] {
+  height: 120px;
+}
+
+.h-\[150px\] {
+  height: 150px;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.w-\[120px\] {
+  width: 120px;
+}
+
+.w-\[150px\] {
+  width: 150px;
+}
+
 .w-full {
   width: 100%;
 }
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.rounded-full {
+  border-radius: 9999px;
 }
 
 .rounded-lg {
@@ -671,12 +727,92 @@ video {
   color: rgb(39 39 42 / var(--tw-text-opacity));
 }
 
+.shadow-\[0px_0px_64px_21px_\#2b6cb0\] {
+  --tw-shadow: 0px 0px 64px 21px #2b6cb0;
+  --tw-shadow-colored: 0px 0px 64px 21px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.duration-500 {
+  transition-duration: 500ms;
+}
+
 .duration-700 {
   transition-duration: 700ms;
 }
 
+.hover\:text-orange-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
+}
+
+.group:hover .group-hover\:right-32 {
+  right: 8rem;
+}
+
+.group:hover .group-hover\:top-\[35px\] {
+  top: 35px;
+}
+
+.group:hover .group-hover\:top-\[5px\] {
+  top: 5px;
+}
+
+.group:hover .group-hover\:top-\[65px\] {
+  top: 65px;
+}
+
+.group:hover .group-hover\:top-\[95px\] {
+  top: 95px;
+}
+
+.group:hover .group-hover\:flex {
+  display: flex;
+}
+
 @media (min-width: 768px) {
+  .md\:h-\[170px\] {
+    height: 170px;
+  }
+
+  .md\:h-\[200px\] {
+    height: 200px;
+  }
+
   .md\:w-3\/4 {
     width: 75%;
+  }
+
+  .md\:w-\[170px\] {
+    width: 170px;
+  }
+
+  .md\:w-\[200px\] {
+    width: 200px;
+  }
+
+  .md\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+
+  .group:hover .md\:group-hover\:right-44 {
+    right: 11rem;
+  }
+
+  .group:hover .md\:group-hover\:top-\[10px\] {
+    top: 10px;
+  }
+
+  .group:hover .md\:group-hover\:top-\[130px\] {
+    top: 130px;
+  }
+
+  .group:hover .md\:group-hover\:top-\[50px\] {
+    top: 50px;
+  }
+
+  .group:hover .md\:group-hover\:top-\[90px\] {
+    top: 90px;
   }
 }
